♻️ Refactor studylog endpoint
